Wrap notification fix.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1309,11 +1309,14 @@ body {
     position:absolute;
     top:20px;
   }
-  .open > .dropdown-menu > li > a{
+  ul.notis.dropdown-menu > li > a{
+
+    white-space: pre-wrap;      /* CSS3 */
     white-space: -moz-pre-wrap; /* Firefox */
     white-space: -pre-wrap;     /* Opera <7 */
     white-space: -o-pre-wrap;   /* Opera 7 */
     word-wrap: break-word;      /* IE */
+
   }
 
   .tableAdd{
